syntax = "proto3";

package ionscale.v1;

import "google/protobuf/timestamp.proto";
import "ionscale/v1/ref.proto";

option go_package = "github.com/jsiebens/ionscale/pkg/gen/ionscale/v1;ionscalev1";

message ListMachinesRequest {
  uint64 tailnet_id = 1;
}

message ListMachinesResponse {
  repeated Machine machines = 1;
}

message DeleteMachineRequest {
  uint64 machine_id = 1;
}

message DeleteMachineResponse {}

message ExpireMachineRequest {
  uint64 machine_id = 1;
}

message ExpireMachineResponse {}

message SetMachineKeyExpiryRequest {
  uint64 machine_id = 1;
  bool disabled = 2;
}

message SetMachineKeyExpiryResponse {}

message GetMachineRequest {
  uint64 machine_id = 1;
}

message GetMachineResponse {
  Machine machine = 1;
}

message Machine {
  uint64 id = 1;
  string name = 2;
  string ipv4 = 3;
  string ipv6 = 4;
  bool ephemeral = 5;
  google.protobuf.Timestamp last_seen = 6;
  bool connected = 7;
  Ref tailnet = 8;
  Ref user = 9;
  repeated string tags = 10;
  string client_version = 11;
  string os = 12;
  ClientConnectivity client_connectivity = 13;
  google.protobuf.Timestamp created_at = 14;
  google.protobuf.Timestamp expires_at = 15;
  bool key_expiry_disabled = 16;
  repeated string enabled_routes = 17;
  repeated string advertised_routes = 18;
  bool advertised_exit_node = 19;
  bool enabled_exit_node = 20;
}

message ClientConnectivity {
  repeated string endpoints = 1;
}
